@@ -1,3 +1,9 @@
+require 'pathname'
+require 'logger'
+$log = Logger.new(STDERR)
+
+require 'rbconfig'
+
 module Gem
 
   ##
@@ -9,7 +15,7 @@ module Gem
     include UserInteraction
   
     ##
-    # Constructs a Installer instance
+    # Constructs an Installer instance
     #
     # gem:: [String] The file name of the gem
     #
@@ -57,6 +63,7 @@ module Gem
       directory = File.join(install_dir, "gems", format.spec.full_name)
       FileUtils.mkdir_p directory
 
+      # Extract files, generate stubs, and build extensions.
       extract_files(directory, format)
       generate_bin_scripts(format.spec)
       generate_library_stubs(format.spec) if install_stub
@@ -127,7 +134,6 @@ module Gem
     #
     def generate_bin_scripts(spec)
       if spec.executables
-        require 'rbconfig'
         bindir = Config::CONFIG['bindir']
         spec.executables.each do |filename|
           File.open(File.join(bindir, File.basename(filename)), "w", 0755) do |file|
@@ -172,75 +178,13 @@ TEXT
     # the gem (latest version) will be loaded.  This is like a backwards compatibility so that
     # gems and non-gems can interact.
     #
-    # XXX: What if the user doesn't have permission to write to the site_ruby directory? 
-    #      Answer for now: emit warning.  This is bad practice (we're in library code here,
-    #      and should not write directly to stderr.  It's something to reconsider in the
-    #      future. 
+    # Which files are stubified?  Those included in the gem's 'autorequire' and 'library_stubs'
+    # attributes.
     #
     def generate_library_stubs(spec)
-      if spec.autorequire
-        require 'rbconfig'
-        sitelibdir = Config::CONFIG['sitelibdir']
-        if FileTest.writable?(sitelibdir)
-          target_file = File.join(sitelibdir, "#{spec.autorequire}.rb")
-          if FileTest.exist?(target_file)
-            unless library_stub?(target_file)
-              alert_warning(
-                ["       Library file '#{target_file}'",
-                 "       already exists; not overwriting.  If you want to force a",
-                 "       library stub, delete the file and reinstall."].join("\n")
-               )
-            end
-          else
-            # Create #{autorequire}.rb in #{target_dir}.
-          unless File.exist? File.dirname(target_file)
-            FileUtils.mkdir_p File.dirname(target_file)
-          end
-            File.open(target_file, "w", 0644) do |file|
-              file.write(library_stub_text(spec.name, target_file.sub(/#{Config::CONFIG['sitelibdir']}\//, "")))
-            end
-          end
-        else
-          rver = Config::CONFIG['ruby_version']
-          alert_warning(
-            ["       Can't install library stub for gem '#{spec.name}'",
-             "       (Don't have write permissions on 'site_ruby/#{rver}' directory.)"].join("\n")
-           )
-        end
-      end
-    end
-    
-    ##
-    # Returns the text for the library stub.
-    #
-    def library_stub_text(name, file_name)
-      text = <<-TEXT
-#
-# This file was generated by RubyGems.
-#
-# The library '#{name}' is installed as part of a gem, and
-# this file is here so you can 'require' it easily (i.e.
-# without having to know it's a gem).
-#
-
-require 'rubygems'
-$".delete('#{file_name}')
-require_gem '#{name}'
-TEXT
-      text
+      LibraryStubs.new(spec).generate
     end
 
-    ##
-    # Returns true iff the given filename contains a library stub.  (Best guess!)
-    #
-    def library_stub?(filename)
-      lines = File.read(filename).to_a
-      lines.grep(/^# This file was generated by RubyGems/) and
-        lines.grep(/is installed as part of a gem, and/) and
-        lines.grep(/^#/).size == 7 and
-        lines.size == 11
-    end
-    
     def build_extensions(directory, spec)
       return unless spec.extensions.size > 0
       say "Building native extensions.  This could take a while..."
@@ -294,7 +238,197 @@ TEXT
         end
       end
     end
-  end
+  end  # class Installer
+
+
+  #
+  # This class represents a single library stub, which is characterised by a 
+  #
+  class LibraryStub
+    SITELIBDIR = Pathname.new(Config::CONFIG['sitelibdir'])
+
+    #
+    # The 'autorequire' attribute in a gemspec is a special case: it represents a require
+    # target, not a relative path.  We therefore offer this method of creating a library stub
+    # for the autorequire file.
+    #
+    # If the given spec doesn't have an 'autorequire' value, we return +nil+.
+    #
+    def self.from_autorequire(gemspec, require_paths)
+      require_target = gemspec.autorequire
+      return nil if require_target.nil?
+      gem_relpath = find_gem_relpath(require_paths, require_target, gemspec)
+      LibraryStub.new(gemspec.name, require_paths, gem_relpath, true)
+    end
+
+    #
+    # require_paths::
+    #   ([Pathname]) The require paths in the gemspec.
+    # gem_relpath::
+    #   (String) The path to the library file, relative to the root of the gem.
+    # autorequire::
+    #   (Boolean) Whether this stub represents the gem's autorequire file.
+    #
+    def initialize(gem_name, require_paths, gem_relpath, autorequire=false)
+      @gem_name       = gem_name
+      @lib_relpath    = find_lib_relpath(require_paths, gem_relpath)
+      @require_target = @lib_relpath.to_s.sub(/\.rb\Z/, '')
+      @stub_path      = SITELIBDIR.join(@lib_relpath)
+      @autorequire    = autorequire
+    end
+
+    #
+    # The powerhouse of the class.  No exceptions should result from calling this.
+    #
+    def generate
+      if @stub_path.exist?
+        # The stub path is inhabited by a file.  If it's a gem stub, we'll overwrite it (just
+        # to be sure).  If it's a genuine library, we'll leave it alone and issue a warning.
+        unless library_stub?(@stub_path)
+          alert_warning(
+            ["Library file '#{target_path}'",
+             "already exists; not overwriting.  If you want to force a",
+             "library stub, delete the file and reinstall."].join("\n")
+          )
+          return
+        end
+      end
+
+      unless @stub_path.dirname.exist?
+        @stub_path.dirname.mkpath
+      end
+      @stub_path.open('w', 0644) do |io|
+        io.write(library_stub_content())
+      end
+    end
+
+    # Two LibraryStub objects are equal if they have the same gem name and relative (gem) path.
+    def ==(other)
+      LibraryStub === other and @gem_name == other.gem_name and
+        @gem_relpath == other.gem_relpath
+    end
+
+   private
+
+    #
+    # require_paths::
+    #   ([Pathname]) The require paths in the gemspec.
+    # require_target::
+    #   (String) The subject of an intended 'require' statement.
+    # gemspec::
+    #   (Gem::Specification) 
+    #
+    # The aim of this method is to resolve the require_target into a path relative to the root
+    # of the gem.  We try each require path in turn, and see if the require target exists under
+    # that directory.
+    #
+    # If no match is found, we return +nil+. 
+    #
+    def self.find_gem_relpath(require_paths, require_target, gemspec)
+      require_target << '.rb' unless require_target =~ /\.rb\Z/
+      gem_files = gemspec.files.map { |path| Pathname.new(path).cleanpath }
+      require_paths.each do |require_path|
+        possible_lib_path = require_path.join(require_target)
+        if gem_files.include?(possible_lib_path)
+          return possible_lib_path.to_s
+        end
+      end
+      nil  # If we get this far, there was no match.
+    end
+
+    #
+    # require_paths::
+    #   ([Pathname]) The require paths in the gemspec.
+    # gem_relpath::
+    #   (String) The path to the library file, relative to the root of the gem.
+    #
+    # Returns: the path (Pathname) to the same file, relative to the gem's library path
+    # (typically 'lib').  Thus 'lib/rake/rdoctask.rb' becomes 'rake/rdoctask.rb'.  The gemspec
+    # may contain several library paths, though that would be unusual, so we must deal with
+    # that possibility here.
+    #
+    # If there is no such relative path, we return +nil+. 
+    #
+    def find_lib_relpath(require_paths, gem_relpath)
+      require_paths.each do |require_path|
+        begin
+          return Pathname.new(gem_relpath).relative_path_from(require_path)
+        rescue ArgumentError
+          next
+        end
+        nil  # If we get this far, there was no match.
+      end
+    end
+
+    # Returns a string suitable for placing in a stub file.
+    def library_stub_content
+      content = %{
+        #
+        # This file was generated by RubyGems.
+        #
+        # The library '#{@gem_name}' is installed as part of a gem, and
+        # this file is here so you can 'require' it easily (i.e.
+        # without having to know it's a gem).
+        #
+        # gem: #{@gem_name}
+        # stub: #{@lib_relpath} 
+        #
+ 
+        require 'rubygems'
+        $".delete('#{@lib_relpath}')
+        require_gem '#{@gem_name}'
+      }.gsub(/^[ \t]+/, '')
+      unless @autorequire
+        content << %{require '#{@require_target}'\n}
+      end
+      content << %{
+        # (end of stub)
+      }.gsub(/^[ \t]+/, '')
+    end
+
+    # Returns true iff the contents of the given _path_ (a Pathname) appear to be a RubyGems
+    # library stub.
+    def library_stub?(path)
+      lines = path.readlines
+      lines.grep(/^# This file was generated by RubyGems/) and
+        lines.grep(/is installed as part of a gem, and/)
+    end
+
+  end  # class LibraryStub
+  
+  
+  #
+  # This class contains the logic to generate all library stubs, including the autorequire, for
+  # a single gemspec.
+  #
+  #   LibraryStubs.new(gemspec).generate 
+  #
+  class LibraryStubs
+    SITELIBDIR = Pathname.new(Config::CONFIG['sitelibdir'])
+
+    def initialize(spec)
+      @spec = spec
+    end
+
+    def generate
+      require_paths = @spec.require_paths.map { |p| Pathname.new(p) }
+      stubs = @spec.library_stubs.map {
+        |stub| LibraryStub.new(@spec.name, require_paths, stub)
+      }
+      stubs << LibraryStub.from_autorequire(@spec, require_paths)
+      stubs = stubs.compact.uniq
+      unless stubs.empty?
+        if FileTest.writable?(SITELIBDIR)
+          stubs.each do |stub| stub.generate end
+        else
+          alert_warning(
+            ["Can't install library stub for gem '#{spec.name}'",
+             "(Don't have write permissions on '#{sitelibdir}' directory.)"].join("\n")
+           )
+        end
+      end
+    end
+  end  # class LibraryStubs
 
   
   ##
@@ -368,7 +502,6 @@ TEXT
           say "Executables and scripts will remain installed."
           return
         else
-          require 'rbconfig'
           bindir = Config::CONFIG['bindir']
           gemspec.executables.each do |exe_name|
             say "Removing #{exe_name}"
@@ -472,4 +605,5 @@ TEXT
       # site_ruby directory certainly brings some tough issues.
     end
   end  # class Uninstaller
-end
+
+end  # module Gem
